# url_shortener

./: LICENSE  README.MD
api/: .coveragerc  .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml
api/config/: settings.py  swagger_settings.py
api/fixtures/: test_links.json
api/shortener/: serializers.py  urls.py  views.py
api/shortener/migrations/: 0001_initial.py
api/shortener/tests/: test_models.py  test_serializers.py  test_views.py
api/users/migrations/: 0001_initial.py
