[tool.poetry]
name = "url shortener"
version = "0.1.0"
description = "URL Shortener project recruitment task."
authors = ["Martyna Witkowska <mar.witkowska@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.1"
djangorestframework = "3.14.0"
pytest = "7.3.1"
pytest-django = "4.5.2"
pytest-cov = "4.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
